--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
