--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9"
   }
 }
