--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
